# rpn-calc

./: .gitignore  README.md  configure.ac  main.c  stack.c
src/: Makefile.am  Makefile.in  main.c  stack.h
